--- a/index.html
+++ b/index.html
@@ -217,21 +217,12 @@
     </div>
   </div>
 
-  <section>
-    <h2>संक्षिप्त परिचय</h2>
-    <p>{{झाडाची सविस्तर माहिती}}</p>
-  </section>
 
   <section>
    <section>
   <h2>संक्षिप्त परिचय</h2>
   <p>
-    कॉसमॉस हे एक आकर्षक, रंगीबेरंगी आणि सहज वाढणारे फुलझाड आहे. हे झाड मुख्यतः बागा, शालेय उद्याने,
-    रस्त्यांच्या कडेला आणि घरगुती कुंड्यांमध्ये लावले जाते. कॉसमॉस फुले गुलाबी, जांभळी, पांढरी,
-    लाल आणि पिवळ्या रंगात आढळतात. या झाडाची वाढ जलद होते आणि कमी देखभालीतही भरभराट होते.
-    कॉसमॉस झाड उंच, सडपातळ आणि नाजूक खोडाचे असते. याची पाने बारीक, कापसासारखी व नक्षीदार दिसतात.
-    हे झाड मधमाश्या, फुलपाखरे यांना आकर्षित करते म्हणून पर्यावरणाच्या दृष्टीने उपयुक्त मानले जाते.
-    कॉसमॉसला जास्त खतांची गरज नसते आणि साध्या जमिनीतही ते चांगले वाढते.
+   कॉसमॉस (Cosmos flower) हे एक अतिशय सुंदर, नाजूक आणि आकर्षक फुलझाड आहे. या वनस्पतीचे शास्त्रीय नाव Cosmos bipinnatus असे असून ती Asteraceae (सूर्यमुखी कुल) या कुळातील आहे. कॉसमॉसचे मूळ स्थान मेक्सिको व मध्य अमेरिका येथे मानले जाते, परंतु आज ही वनस्पती जगभर शोभेच्या फुलझाड म्हणून लावली जाते. कॉसमॉस हे वार्षिक फुलझाड असून ते साधारणतः दोन ते सहा फूट उंच वाढते. याचे खोड बारीक, सरळ आणि हिरवट रंगाचे असते. याची पाने अत्यंत नाजूक, बारीक व पिसांसारखी विभागलेली असल्यामुळे संपूर्ण झाड हलके आणि कोमल दिसते. कॉसमॉसची फुले मोठी, टवटवीत आणि मन मोहून टाकणारी असतात. फुलांचे रंग गुलाबी, पांढरे, जांभळे, लाल, केशरी तसेच मिश्र रंगांचे असतात. फुलांच्या मध्यभागी पिवळ्या रंगाचा गोल भाग असतो, जो फुलाला वेगळे सौंदर्य प्रदान करतो. ही फुले सकाळच्या सूर्यप्रकाशात अधिक खुललेली आणि ताजीतवानी दिसतात. कॉसमॉस फुलझाडाला भरपूर सूर्यप्रकाशाची आवश्यकता असते आणि दिवसातून किमान सहा ते आठ तास सूर्यप्रकाश मिळाल्यास फुलोरा भरपूर येतो. ही वनस्पती कमी काळजीत सहज वाढते, त्यामुळे नवशिक्या बागकाम करणाऱ्यांसाठी ती अतिशय योग्य आहे. निचऱ्याची माती कॉसमॉससाठी उपयुक्त ठरते, कारण पाणी साचल्यास झाडाच्या मुळांना इजा होऊ शकते. या झाडाला फार जास्त खताची गरज नसते आणि कमी प्रमाणात खत दिले तरी ते चांगले वाढते. मध्यम प्रमाणात पाणी देणे कॉसमॉससाठी योग्य असते. कोरड्या हवामानातही हे झाड तग धरू शकते. कॉसमॉसची लागवड बियांपासून केली जाते आणि बिया थेट जमिनीत किंवा कुंडीत पेरता येतात. साधारणतः पेरणीनंतर पंचेचाळीस ते साठ दिवसांत झाड फुलायला लागते. जुनी फुले काढत राहिल्यास नवीन फुलांची वाढ सतत होत राहते. या फुलांवर मधमाश्या, फुलपाखरे आणि इतर परागीभवन करणारे कीटक मोठ्या प्रमाणात आकर्षित होतात, त्यामुळे हे झाड पर्यावरणासाठी उपयुक्त मानले जाते. फुलबागा, उद्याने, शाळांच्या बागा तसेच रस्त्यांच्या कडेला कॉसमॉसची लागवड केली जाते. कॉसमॉसची फुले सजावटीसाठी, पुष्पगुच्छांसाठी आणि कार्यक्रमांमध्ये मोठ्या प्रमाणावर वापरली जातात. हे फुल सौंदर्य, साधेपणा, आनंद आणि निसर्गाशी जवळीक यांचे प्रतीक मानले जाते. कमी खर्चात आणि कमी मेहनतीत बागेला रंगत आणणारे कॉसमॉस हे एक अत्यंत लोकप्रिय आणि उपयुक्त फुलझाड आहे.
   </p>
 </section>
 
@@ -312,3 +303,4 @@
 
 </body>
 </html>
+
